conclusão do curso de flex_box

--- a/style.css
+++ b/style.css
@@ -264,6 +264,183 @@ div.wrapper-content aside.profile .images ul li{
     margin-right: 5px;
     margin: 0 0 5px 10px;
 }
+div.wrapper-content .timeline{
+    flex: 1;
+    background: #fff;
+    margin: 10px 20px 0;
+}
+div.wrapper-content .timeline nav{
+    border-bottom: 1px solid #c9c0c0;
+    padding: 10px 15px;
+    
+}
+div.wrapper-content .timeline nav a{
+   text-decoration: none;
+   color: #3bb9e3;
+   font-size: 18px;
+   font-weight: bold;
+   margin-left: 20px;
+    
+}
+div.wrapper-content .timeline nav a:first-child{ 
+    margin-left: 0; 
+ }
+ div.wrapper-content .timeline nav a.active{
+    color: #1f2226;
+     
+ }
+ div.wrapper-content .timeline ul.tweets{
+     list-style: none;
+ }
+ div.wrapper-content .timeline ul.tweets li{
+    border-bottom: 1px solid #c9c0c0;
+    padding: 10px 15px;
+    display: flex;
+ }
+ div.wrapper-content .timeline ul.tweets li > img{
+     border-radius: 50%;
+     width: 48px;
+     height: 48px;
+ }
+ div.wrapper-content .timeline ul.tweets li .info{
+     margin-left: 10px;
+     display: flex;
+     flex-direction: column;
+ }
+ div.wrapper-content .timeline ul.tweets li .info strong{
+    font-size: 14px;
+    color: #1f2226;
+    color: #89a8a8;
+}
+div.wrapper-content .timeline ul.tweets li .info strong span{
+    font-size: 13px;
+    font-weight: normal;
+}
+div.wrapper-content .timeline ul.tweets li .info p{
+    font-size: 14px ;
+    color: #89a8a8;
+    margin-top: 5px;
+}
+div.wrapper-content .timeline ul.tweets li .actions{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+
+}
+div.wrapper-content .timeline ul.tweets li .actions a{
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #3bb9e3;
+    font-weight: bold;
+    font-size: 12px;
+    margin-left: 30px;
+
+}
+div.wrapper-content .timeline ul.tweets li .actions a:first-child{
+    margin-left: 0;
+}
+div.wrapper-content .timeline ul.tweets li .actions img{
+    margin-right: 5px;
+}
+div.wrapper-content aside.widgets{
+    width: 290px;
+    margin-top: 10px;
+
+}
+div.wrapper-content aside.widgets .widget{
+    background: #fff;
+    padding: 15px;
+}
+div.wrapper-content aside.widgets .widget .title{
+    display: flex;
+    align-items: baseline;
+}
+div.wrapper-content aside.widgets .widget .title strong{
+    font-size: 18px;
+    color:#1f2226
+}
+div.wrapper-content aside.widgets .widget .title a{
+    font-size: 12px;
+    color: #3bb9e3;
+    text-decoration: none;
+    position: relative;
+    padding-left: 15px;
+}
+div.wrapper-content aside.widgets .widget .title a::before{
+    content: '';
+    width: 2px;
+    height: 2px;
+    border-radius: 50%;
+    margin-left: 5px;
+    margin-right: 5px;
+    background: #222;
+    position: absolute;
+    left: 4px;
+    top: 6px;
+}
+div.wrapper-content aside.widgets .follow ul{
+    list-style: none;
+    
+}
+div.wrapper-content aside.widgets .widget li{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    border-bottom: 1px solid #ccd5cc;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+div.wrapper-content aside.widgets .widget li:last-child{
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border: 0;
+}
+div.wrapper-content aside.widgets .widget li .profile{
+    display: flex;
+    align-items: center;
+}
+div.wrapper-content aside.widgets .widget li .profile img{
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+div.wrapper-content aside.widgets .widget li .profile .info{
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+
+}
+div.wrapper-content aside.widgets .widget li .profile .info strong{
+    font-size: 14px;
+    color: #1f2226;
+}
+div.wrapper-content aside.widgets .widget li .profile .info strong span{
+    font-weight: normal;
+    color: #9a9a9a;
+}
+div.wrapper-content aside.widgets .widget li .profile .info button{
+    height: 27px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    width: 90px;
+    font-weight: bold;
+    font-size: 14px;
+    border: 1px solid  #3bb9e3;
+    border-radius: 16px;
+    color: #3bb9e3;
+    margin-top: 4px;
+}
+div.wrapper-content aside.widgets .widget li > a{
+    color: #ccd5cc;
+    text-decoration: none ;
+    font-size: 12px;
+}
+
+
 
 
 
